[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hocky-hls"
version = "0.1.0"
description = "FastAPI service for recording HLS streams to match directories."
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets",
    "tos"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4",
]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["app", "record"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
